--- a/Pitch Perfect/Base.lproj/Main.storyboard
+++ b/Pitch Perfect/Base.lproj/Main.storyboard
@@ -60,49 +60,43 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Record your own voice, and add funny effects to it!" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ex3-jf-wdi">
-                                <rect key="frame" x="-42" y="-21" width="42" height="21"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                                <variation key="widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="83" y="153" width="235" height="78"/>
-                                </variation>
-                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wIm-6a-ZkJ">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" image="Pause"/>
+                                <connections>
+                                    <action selector="pauseResumeRecording:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bEw-U2-nNp"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="zDa-Y4-zxG" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1CL-IN-YgI"/>
                             <constraint firstItem="fhi-h6-XoX" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="3UI-ZH-rPF"/>
-                            <constraint firstItem="Ex3-jf-wdi" firstAttribute="top" secondItem="004-RL-PG9" secondAttribute="bottom" constant="20" id="6S3-gg-dCo"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="zDa-Y4-zxG" secondAttribute="bottom" constant="30.5" id="6S4-Gt-Dvd"/>
                             <constraint firstItem="fhi-h6-XoX" firstAttribute="top" secondItem="IXT-uB-yQo" secondAttribute="bottom" constant="49" id="CmU-hU-FHF"/>
                             <constraint firstItem="IXT-uB-yQo" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="NS9-xF-rpX"/>
+                            <constraint firstItem="wIm-6a-ZkJ" firstAttribute="leading" secondItem="zDa-Y4-zxG" secondAttribute="trailing" constant="48" id="OaQ-v1-S79"/>
                             <constraint firstItem="004-RL-PG9" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="36" id="as1-mZ-wdN"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="wIm-6a-ZkJ" secondAttribute="bottom" constant="31" id="bSi-jI-wY4"/>
                             <constraint firstItem="IXT-uB-yQo" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="ePE-fs-aKN"/>
-                            <constraint firstItem="Ex3-jf-wdi" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gMW-FK-wQx"/>
+                            <constraint firstItem="zDa-Y4-zxG" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="106" id="q7a-EB-Wme"/>
                             <constraint firstItem="004-RL-PG9" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qXy-Hr-Ihy"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Ex3-jf-wdi" secondAttribute="trailing" constant="62" id="uwR-ee-hnw"/>
-                            <constraint firstItem="Ex3-jf-wdi" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="63" id="wzm-KA-M0T"/>
                         </constraints>
                         <variation key="default">
                             <mask key="subviews">
                                 <exclude reference="fhi-h6-XoX"/>
                                 <exclude reference="zDa-Y4-zxG"/>
                                 <exclude reference="004-RL-PG9"/>
-                                <exclude reference="Ex3-jf-wdi"/>
+                                <exclude reference="wIm-6a-ZkJ"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="6S3-gg-dCo"/>
-                                <exclude reference="gMW-FK-wQx"/>
-                                <exclude reference="uwR-ee-hnw"/>
-                                <exclude reference="wzm-KA-M0T"/>
                                 <exclude reference="as1-mZ-wdN"/>
                                 <exclude reference="qXy-Hr-Ihy"/>
                                 <exclude reference="3UI-ZH-rPF"/>
                                 <exclude reference="CmU-hU-FHF"/>
-                                <exclude reference="1CL-IN-YgI"/>
+                                <exclude reference="q7a-EB-Wme"/>
+                                <exclude reference="OaQ-v1-S79"/>
                                 <exclude reference="6S4-Gt-Dvd"/>
+                                <exclude reference="bSi-jI-wY4"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -110,24 +104,23 @@
                                 <include reference="fhi-h6-XoX"/>
                                 <include reference="zDa-Y4-zxG"/>
                                 <include reference="004-RL-PG9"/>
-                                <include reference="Ex3-jf-wdi"/>
+                                <include reference="wIm-6a-ZkJ"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="6S3-gg-dCo"/>
-                                <include reference="gMW-FK-wQx"/>
-                                <include reference="uwR-ee-hnw"/>
-                                <include reference="wzm-KA-M0T"/>
                                 <include reference="as1-mZ-wdN"/>
                                 <include reference="qXy-Hr-Ihy"/>
                                 <include reference="3UI-ZH-rPF"/>
                                 <include reference="CmU-hU-FHF"/>
-                                <include reference="1CL-IN-YgI"/>
+                                <include reference="q7a-EB-Wme"/>
+                                <include reference="OaQ-v1-S79"/>
                                 <include reference="6S4-Gt-Dvd"/>
+                                <include reference="bSi-jI-wY4"/>
                             </mask>
                         </variation>
                     </view>
                     <navigationItem key="navigationItem" id="yyw-WO-hn4"/>
                     <connections>
+                        <outlet property="pauseResumeButton" destination="wIm-6a-ZkJ" id="7fw-2E-Ljk"/>
                         <outlet property="recordButton" destination="IXT-uB-yQo" id="wLZ-VE-ZSE"/>
                         <outlet property="recordingStatus" destination="fhi-h6-XoX" id="wQS-zh-iKM"/>
                         <outlet property="stopButton" destination="zDa-Y4-zxG" id="geF-tz-1kQ"/>
@@ -251,6 +244,7 @@
     <resources>
         <image name="Chipmunk" width="100" height="100"/>
         <image name="DarthVader" width="100" height="100"/>
+        <image name="Pause" width="50" height="50"/>
         <image name="PlayFastSpeed" width="100" height="100"/>
         <image name="PlaySlowSpeed" width="100" height="100"/>
         <image name="Stop" width="50" height="50"/>
